# MiniEngine

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/Core/: Assets.cpp  Assets.h  Input.cpp  Input.h  Time.cpp  Time.h
src/Gfx/: DeferredRenderer.cpp  DeferredRenderer.h  Lighting.h  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h
src/Scene/: Camera.cpp  Camera.h  Entity.h  Scene.cpp  Scene.h  Transform.h
src/Shaders/: deferred_light.frag  deferred_light.vert  gbuffer.frag  gbuffer.vert  lit.frag  lit_instanced.vert  skybox.frag  skybox.vert
